# whaledetection

./: .gitignore  LICENSE  README.md  data_loader.py  debugging.py  huggingface_load.py  preprocessing.py  preprocessing_mapping.py  pyproject.toml  short_test.py  swt_denoise_mfcc_extract_linear_svm.py  test_Swt2.py  test_long_swt.py  test_noisereduce.py  test_preprocessing.py  test_swt.py  test_swt_denoise_gp_model.py
configs/: config.yaml
models/svm/: svm_mffc_deltas_model.joblib  svm_mffc_only_model.joblib  svm_mffc_swt_model.joblib
scripts/: download_databases.py  preprocessing.py  rf_train.py  svm_inference.py  svm_train.py
src/Whaledetection.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/meinpaket.egg-info/: PKG-INFO  SOURCES.txt
src/whaledetection/: config_loader.py  config_types.py  load_dataset.py  padding.py  root_path.py  swt.py
src/whaledetection/config/: config_loader.py  config_types.py
src/whaledetection/datasets/: whaleFM_database.py  wmms_database.py
src/whaledetection/features/: mfcc.py  vggish.py
src/whaledetection/model/: lstm.py  random_forest.py  sequential.py  svm.py
src/whaledetection/signal/: dwt.py  framing.py  padding.py  swt.py  thresholding.py
src/whaledetection/tests/: test_ringbuffer.py  test_ringbuffer_ai.py
src/whaledetection/visualizations/: plotting.py
